--- a/styles/elements.scss
+++ b/styles/elements.scss
@@ -212,5 +212,138 @@
       outline: none;
       width: 100%;
     }
+
+    &--horizontal {
+      display: flex;
+      align-items: center;
+
+      & > label {
+        margin-right: 16px;
+
+        &:last-child {
+          margin-left: 16px;
+        }
+      }
+
+      & > select,
+      input,
+      textarea {
+        flex: 1;
+      }
+    }
+  }
+}
+
+.a-divider {
+  height: 1px;
+  background-color: #f2f2f2;
+}
+
+.a-button {
+  font-family: "Open Sans";
+  font-weight: 600;
+  font-size: 14px;
+  color: #fff;
+  background-color: #f50d08;
+  padding: 10px 35px;
+  border: 1px solid #f50d08;
+
+  &--outlined {
+    color: #f50d08;
+    background-color: #fff;
+  }
+
+  &--cancel {
+    color: #666666;
+    background-color: #fff;
+    border: 1px solid #fff;
+  }
+}
+
+.a-link {
+  font-size: 14px;
+  text-decoration: none;
+  color: #f50d08;
+
+  &:hover {
+    color: #f50d08;
+    cursor: pointer;
+  }
+}
+
+.a-overlay {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 90;
+  background: rgba(0, 0, 0, 0.65);
+}
+
+.a-modal {
+  background: #ffffff;
+  box-shadow: 0px 6px 18px rgba(44, 44, 44, 0.4);
+  padding: 48px 36px 36px;
+  max-width: 410px;
+
+  &__text {
+    font-size: 16px;
+    font-weight: 600;
+    text-align: center;
+    margin-bottom: 50px;
+  }
+
+  &__actions {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+.a-checkbox {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+
+  &__input {
+    width: 0px;
+    height: 0px;
+    margin: 0px;
+    opacity: 0;
+
+    &:checked ~ .a-checkbox__checkmark {
+      &:after {
+        display: block;
+      }
+    }
+  }
+
+  &__checkmark {
+    position: relative;
+    width: 20px;
+    height: 20px;
+    margin: 0px 15px 0px 0px;
+    border: 1px solid #dd0b06;
+    border-radius: 2px;
+
+    &:after {
+      content: "";
+      position: absolute;
+      display: none;
+      top: 3px;
+      left: 3px;
+      width: 12px;
+      height: 12px;
+      background-color: #dd0b06;
+      border-radius: 2px;
+    }
+  }
+
+  &__label {
+    font-size: 14px;
   }
 }
