--- a/styles/index.scss
+++ b/styles/index.scss
@@ -78,3 +78,84 @@ body {
     margin-bottom: 18px;
   }
 }
+
+.a-calc {
+  max-width: 620px;
+  margin: 0 auto;
+  margin-bottom: 20px;
+  background: #ffffff;
+  border: 1px solid #f2f2f2;
+  padding: 32px;
+
+  &__header {
+    font-weight: 600;
+    font-size: 24px;
+    margin-bottom: 16px;
+  }
+
+  &__section:not(:last-of-type) {
+    margin-bottom: 20px;
+  }
+
+  &__label {
+    display: block;
+    font-weight: 600;
+    font-size: 16px;
+    margin-right: 12px;
+    margin-bottom: 8px;
+
+    &-thin {
+      font-size: 12px;
+      color: #666666;
+      margin-bottom: 8px;
+    }
+  }
+
+  &__price {
+    font-weight: 600;
+    font-size: 24px;
+  }
+}
+
+.a-bank {
+  background: #ffffff;
+  border: 1px solid #f2f2f2;
+  padding: 8px 24px;
+  margin-bottom: 20px;
+
+  &__title {
+    display: block;
+    font-weight: 600;
+    font-size: 16px;
+  }
+
+  &__section {
+    font-size: 12px;
+    padding: 16px 0px;
+    &:not(:last-of-type) {
+      border-bottom: 1px solid #f2f2f2;
+    }
+
+    ul {
+      margin: 0;
+      padding-left: 16px;
+    }
+  }
+
+  &__card {
+    text-align: center;
+
+    & > img {
+      margin-bottom: 8px;
+    }
+
+    & > span {
+      display: block;
+      font-size: 14px;
+
+      &:last-of-type {
+        font-weight: 700;
+      }
+    }
+  }
+}
