add radio disabled style

--- a/styles/elements.scss
+++ b/styles/elements.scss
@@ -139,6 +139,32 @@
   display: flex;
   align-items: center;
   cursor: pointer;
+  position: relative;
+
+  &--disabled {
+    &::before {
+      content: '';
+      position: absolute;
+      z-index: 1;
+      top: -2px;
+      left: -2px;
+      display: block;
+      height: calc(100% + 4px);
+      width: calc(100% + 4px);
+      backdrop-filter: blur(1px);
+    }
+
+    &::after {
+      content: 'Недоступен(а)';
+      position: absolute;
+      left: 240px;
+      z-index: 2;
+      background: #EB111C;
+      padding: 3px 6px;
+      color: #fff;
+      font-size: 10px;
+    }
+  }
 
   &__input {
     width: 0px;
