--- a/styles/index.scss
+++ b/styles/index.scss
@@ -167,9 +167,10 @@ body {
     & > span {
       display: block;
       font-size: 14px;
+      font-weight: 700;
 
-      &:last-of-type {
-        font-weight: 700;
+      &:first-of-type {
+        font-weight: 400;
       }
     }
   }
