--- a/styles/index.scss
+++ b/styles/index.scss
@@ -160,6 +160,11 @@ body {
       border-bottom: 1px solid #f2f2f2;
     }
 
+    p {
+      margin: 0px;
+      line-height: 1.25em;
+    }
+
     ul {
       margin: 0;
       padding-left: 16px;
@@ -186,6 +191,7 @@ body {
     & > span {
       display: block;
       font-size: 14px;
+      line-height: 1.25em;
       font-weight: 700;
 
       &:first-of-type {
