--- a/styles/index.scss
+++ b/styles/index.scss
@@ -112,19 +112,24 @@ body {
     display: block;
     font-weight: 600;
     font-size: 16px;
+    line-height: 16px;
     margin-right: 12px;
     margin-bottom: 8px;
 
     &-thin {
       font-size: 12px;
+      line-height: 16px;
       color: #666666;
+      margin-top: 2px;
       margin-bottom: 8px;
     }
   }
 
   &__link {
     font-size: 12px;
+    line-height: 16px;
     color: #dd0b06;
+    margin-top: 2px;
     margin-bottom: 8px;
     text-decoration: none;
   }
