--- a/styles/index.scss
+++ b/styles/index.scss
@@ -128,10 +128,9 @@ body {
   &__link {
     font-size: 12px;
     line-height: 16px;
-    color: #dd0b06;
+    color: #666666;
     margin-top: 2px;
     margin-bottom: 8px;
-    text-decoration: none;
   }
 
   &__price {
