fix bank card img height

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -187,8 +187,9 @@ body {
   &__card {
     text-align: center;
 
-    & > img {
+    &-image {
       margin-bottom: 8px;
+      height: 34px;
     }
 
     & > span {
@@ -223,7 +224,7 @@ body {
     }
 
     &__card {
-      & > img {
+      &-image {
         display: none;
       }
 
